UPDATE : 시간표 정보에서 요일 보이도록 수정

--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -75,6 +75,14 @@
                 <include layout="@layout/sub_request_reserv"/>
                 <include layout="@layout/sub_request_reserv"/>
                 <include layout="@layout/sub_request_reserv"/>
+                <include layout="@layout/sub_request_reserv"/>
+                <include layout="@layout/sub_request_reserv"/>
+                <include layout="@layout/sub_request_reserv"/>
+                <include layout="@layout/sub_request_reserv"/>
+                <include layout="@layout/sub_request_reserv"/>
+                <include layout="@layout/sub_request_reserv"/>
+                <include layout="@layout/sub_request_reserv"/>
+                <include layout="@layout/sub_request_reserv"/>
             </LinearLayout>
 
 
