--- a/app/src/main/res/layout/fragment_reserv.xml
+++ b/app/src/main/res/layout/fragment_reserv.xml
@@ -214,17 +214,29 @@
                         android:layout_marginTop="5dp"
                         android:orientation="horizontal">
 
-                        <TextView
+                        <!-- 시작 시간 선택 스피너 -->
+                        <EditText
+                            android:id="@+id/startTimeEditText"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+
+                            android:hint="HH:mm"
+                            android:background="@android:color/transparent"
+
+                            android:inputType="time"
+                            android:focusable="false"
+                            android:clickable="true"
+
                             android:text="09:00"
-                            android:textSize="14dp" />
+                            android:textSize="16sp"
+                            android:textColor="@color/natural_navy"
+                            />
 
                         <View
                             android:layout_width="12dp"
                             android:layout_height="6dp"
                             android:layout_gravity="center"
-                            android:layout_marginLeft="5dp"
                             android:background="@drawable/ic_arrow_down"
                             android:backgroundTint="@color/natural_navy" />
 
@@ -236,17 +248,29 @@
                             android:text="~"
                             android:textSize="18dp" />
 
-                        <TextView
+                        <!-- 시작 시간 선택 스피너 -->
+                        <EditText
+                            android:id="@+id/endTimeEditText"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="11:00"
-                            android:textSize="14dp" />
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+
+                            android:hint="HH:mm"
+                            android:background="@android:color/transparent"
+
+                            android:inputType="time"
+                            android:focusable="false"
+                            android:clickable="true"
+
+                            android:text="09:00"
+                            android:textSize="16sp"
+                            android:textColor="@color/natural_navy"
+                            />
 
                         <View
                             android:layout_width="12dp"
                             android:layout_height="6dp"
                             android:layout_gravity="center"
-                            android:layout_marginLeft="5dp"
                             android:background="@drawable/ic_arrow_down"
                             android:backgroundTint="@color/natural_navy" />
                     </LinearLayout>
@@ -281,7 +305,7 @@
                             android:background="@null"
                             android:spinnerMode="dialog"
                             android:text="09:00"
-                            android:textSize="14dp" />
+                            android:textSize="16sp" />
 
                         <View
                             android:layout_width="12dp"
@@ -327,7 +351,9 @@
                     android:fontFamily="@font/noto_sans_kr_regular"
                     android:includeFontPadding="false"
                     android:text="좌석을 선택해주세요."
-                    android:textSize="14dp" />
+                    android:textSize="16sp"
+                    android:textColor="@color/natural_navy"
+                    />
             </LinearLayout>
             <!-- LAYOUT END 좌석 선택 정보 레이아웃 -->
 
