--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -7,7 +7,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:background="@color/white">
 
 
         <LinearLayout
@@ -100,6 +101,7 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <Button
+                        android:id="@+id/idCheckBtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
