UPDATE : 실습실별 시간표 조회 기능 구현(최적화 필요) + TimeTableView 커스텀

--- a/app/src/main/res/layout/fragment_time_table.xml
+++ b/app/src/main/res/layout/fragment_time_table.xml
@@ -89,7 +89,7 @@
             </LinearLayout>
             <!-- LAYOUT END 실습실 좌석 현황 텍스트 레이아웃 -->
 
-            <com.example.lab.utils.CustomTimeTableView
+            <com.example.lab.custom.timetableview.CustomTimeTableView
                 android:id="@+id/timetable"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
