UPDATE : 시간표 추가/수정 화면 모드 구분 추가

--- a/app/src/main/res/layout/bottomsheet_add_class.xml
+++ b/app/src/main/res/layout/bottomsheet_add_class.xml
@@ -38,6 +38,7 @@
                     android:textSize="12dp" />
 
                 <TextView
+                    android:id="@+id/layoutTitleTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/semesterTextView"
