--- a/app/src/main/res/layout/fragment_time_table.xml
+++ b/app/src/main/res/layout/fragment_time_table.xml
@@ -5,130 +5,138 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".view.fragment.ReservFragment">
 
-    <ScrollView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
-        <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_height="match_parent">
+
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
-            android:orientation="vertical">
+            android:fillViewport="true">
 
-            <!-- LAYOUT 실습실 좌석 현황 텍스트 레이아웃 -->
-            <LinearLayout
-                android:id="@+id/titleLayout"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:orientation="vertical">
 
-                android:paddingTop="30dp"
-                android:paddingLeft="30dp"
-                android:paddingRight="30dp"
-                android:orientation="horizontal"
-
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent">
-
+                <!-- LAYOUT 실습실 좌석 현황 텍스트 레이아웃 -->
                 <LinearLayout
+                    android:id="@+id/titleLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/todayTV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/poppins_regular"
-                        android:text="2022년 2학기"
-                        android:textColor="@color/colorAccent"
-                        android:textSize="12dp"
-                        android:includeFontPadding="false"
-                        />
+                    android:paddingTop="30dp"
+                    android:paddingLeft="30dp"
+                    android:paddingRight="30dp"
+                    android:orientation="horizontal"
+
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:orientation="vertical">
+
                         <TextView
+                            android:id="@+id/todayTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/noto_sans_kr_bold"
+                            android:fontFamily="@font/poppins_regular"
+                            android:text="2022년 2학기"
+                            android:textColor="@color/colorAccent"
+                            android:textSize="12dp"
                             android:includeFontPadding="false"
-                            android:text="실습실 시간표 조회"
-                            android:textColor="@color/natural_navy"
-                            android:textSize="16dp" />
-
-                        <View
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"
-                            android:layout_weight="1"/>
-
-                        <!-- 실습실 선택 스피너 -->
-                        <Spinner
-                            android:id="@+id/labSelector"
-                            android:layout_width="50dp"
-                            android:layout_height="match_parent"
-                            android:layout_gravity="right|center"
-                            android:background="@null"
-                            android:dropDownWidth="75dp"
                             />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/noto_sans_kr_bold"
+                                android:includeFontPadding="false"
+                                android:text="실습실 시간표 조회"
+                                android:textColor="@color/natural_navy"
+                                android:textSize="16dp" />
+
+                            <View
+                                android:layout_width="0dp"
+                                android:layout_height="0dp"
+                                android:layout_weight="1"/>
+
+                            <!-- 실습실 선택 스피너 -->
+                            <Spinner
+                                android:id="@+id/labSelector"
+                                android:layout_width="50dp"
+                                android:layout_height="match_parent"
+                                android:layout_gravity="right|center"
+                                android:background="@null"
+                                android:dropDownWidth="75dp"
+                                />
+                            <View
+                                android:layout_width="12dp"
+                                android:layout_height="6dp"
+                                android:layout_gravity="center"
+                                android:layout_marginRight="10dp"
+                                android:background="@drawable/ic_arrow_down"/>
+                        </LinearLayout>
+
                         <View
-                            android:layout_width="12dp"
-                            android:layout_height="6dp"
-                            android:layout_gravity="center"
-                            android:layout_marginRight="10dp"
-                            android:background="@drawable/ic_arrow_down"/>
+                            android:layout_width="match_parent"
+                            android:layout_height="0.5dp"
+                            android:layout_marginTop="15dp"
+                            android:background="@color/gray" />
                     </LinearLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:layout_marginTop="15dp"
-                        android:background="@color/gray" />
                 </LinearLayout>
-            </LinearLayout>
-            <!-- LAYOUT END 실습실 좌석 현황 텍스트 레이아웃 -->
+                <!-- LAYOUT END 실습실 좌석 현황 텍스트 레이아웃 -->
 
-            <com.example.lab.custom.timetableview.CustomTimeTableView
-                android:id="@+id/timetable"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:column_count="6"
-                app:row_count="12"
-                app:header_title="@array/time_table_list"
-
-                app:layout_constraintTop_toBottomOf="@+id/titleLayout"
-                />
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/addClassBtnCardView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                android:layout_margin="25dp"
-
-                app:cardBackgroundColor="@color/semi_light_blue"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="0dp"
-
-                app:layout_constraintTop_toBottomOf="@+id/timetable"
-                app:layout_constraintBottom_toBottomOf="parent">
-
-                <Button
-                    android:id="@+id/addClassBtn"
-                    style="?android:attr/borderlessButtonStyle"
+                <com.example.lab.custom.timetableview.CustomTimeTableView
+                    android:id="@+id/timetable"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:fontFamily="@font/noto_sans_kr_regular"
+                    app:column_count="6"
+                    app:row_count="12"
+                    app:header_title="@array/time_table_list"
 
-                    android:includeFontPadding="false"
-                    android:text="수업 추가"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="16dp" />
-            </androidx.cardview.widget.CardView>
+                    app:layout_constraintTop_toBottomOf="@+id/titleLayout"
+                    />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/addClassBtnCardView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    android:layout_margin="25dp"
+
+                    app:cardBackgroundColor="@color/semi_light_blue"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="0dp"
+
+                    app:layout_constraintTop_toBottomOf="@+id/timetable"
+                    app:layout_constraintBottom_toBottomOf="parent">
+
+                    <Button
+                        android:id="@+id/addClassBtn"
+                        style="?android:attr/borderlessButtonStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/noto_sans_kr_regular"
+
+                        android:includeFontPadding="false"
+                        android:text="수업 추가"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="16dp" />
+                </androidx.cardview.widget.CardView>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 </layout>
 
